home/programs/thunderbird: prevent collapsing toolbar into columns

--- a/home/programs/thunderbird/userChrome.css
+++ b/home/programs/thunderbird/userChrome.css
@@ -19,6 +19,7 @@
 }
 
 #headerSenderToolbarContainer {
+  flex-direction: row-reverse !important;
   align-items: baseline !important;
 }
 
